- Updating and cleaning repo